[Backend] delete module Progress and replace with status campaign Participant
